# payments-service-backend

./: .env-template  Dockerfile  README.md  alembic.ini  docker-compose.yml  ensure_db.py  pyproject.toml  temp_hash.py
alembic/: env.py
alembic/versions/: 082f2ed10449_seed_default_admin_and_user.py  4f7996f06711_add_processing_status_to_outbox_events.py  b14fee0a3cb4_add_external_id_to_account_model.py  d2f56218a189_create_users_accounts_payments_tables.py  efeefca87cb7_initial.py
app/: main.py
app/api/: deps.py
app/api/v1/routers/: accounts.py  admin_users.py  auth.py  payments.py  users.py
app/api/v1/schemas/: account.py  auth.py  payment.py  user.py
app/broker/: rabbit.py
app/core/: __init__.py  config.py  db_helper.py  models.py  security.py
app/core/models/: __init__.py  outbox_event.py  payment.py
app/services/: outbox.py  payment.py  payment_processing.py  webhook.py
app/workers/: outbox_publisher.py  payment_consumer.py
tests/: conftest.py  test_payments_api.py
